Add database, logging and exception handling

--- a/BankAccount.OrchestratorAPI/BankAccount.OrchestratorAPI.csproj
+++ b/BankAccount.OrchestratorAPI/BankAccount.OrchestratorAPI.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="BankAccount.db-shm" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
