Configure to use user secrets

--- a/BankAccount.OrchestratorAPI/BankAccount.OrchestratorAPI.csproj
+++ b/BankAccount.OrchestratorAPI/BankAccount.OrchestratorAPI.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>712b208f-cc0f-4a20-8aea-a2b385619c90</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
