--- a/BankAccount.AzureFunctions/BankAccount.AzureFunctions.csproj
+++ b/BankAccount.AzureFunctions/BankAccount.AzureFunctions.csproj
@@ -5,6 +5,14 @@
     <UserSecretsId>712b208f-cc0f-4a20-8aea-a2b385619c90</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="StaticFiles\CommunicateWithMember.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="StaticFiles\CommunicateWithMember.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.ServiceBus" Version="5.8.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.0" />
